crates/cli/tests/snapshots/run_test__node__handles_process_exit_code_nonzero.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 352
expression: get_assert_output(&assert)
---
▪▪▪▪ node:exitCodeNonZero
stdout
This should appear!
stderr

[38;5;15m[48;5;161m[1m ERROR [0m Process ~/.moon/tools/node/16.0.0/bin/node failed with a 1 exit code.


