crates/cli/tests/snapshots/run_test__node__handles_process_exit_code_zero.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 44
expression: get_assert_output(&assert)
---
▪▪▪▪ node:exitCodeZero
stdout
This should appear!

Tasks: 1 completed
 Time: 100ms

stderr

