crates/cli/tests/snapshots/run_test__node__handles_process_exit_nonzero.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 44
expression: get_assert_output(&assert)
---
▪▪▪▪ node:processExitNonZero
stdout
stderr

[38;5;15m[48;5;161m[1m ERROR [0m

Action runner failed to run: Process ~/.moon/tools/node/16.0.0/bin/node failed with a 1 exit code.


