crates/cli/tests/snapshots/run_test__node__handles_process_exit_zero.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 315
expression: get_assert_output(&assert)
---
▪▪▪▪ npm install
▪▪▪▪ node:processExitZero
stdout

Tasks: 1 completed
 Time: 100ms

stderr

