crates/cli/tests/snapshots/run_test__node__inherits_moon_env_vars.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 434
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ node:envVarsMoon
MOON_CACHE=write
MOON_CACHE_DIR=<WORKSPACE>/.moon/cache
MOON_LOG=info
MOON_PROJECT_ID=node
MOON_PROJECT_ROOT=<WORKSPACE>/node
MOON_PROJECT_RUNFILE=<WORKSPACE>/.moon/cache/runs/node/runfile.json
MOON_PROJECT_SOURCE=node
MOON_RUN_TARGET=node:envVarsMoon
MOON_TOOLCHAIN_DIR=~/.moon
MOON_WORKING_DIR=<WORKSPACE>
MOON_WORKSPACE_ROOT=<WORKSPACE>

Tasks: 1 completed
 Time: 100ms


