crates/cli/tests/snapshots/run_test__node__passes_args_through.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 410
expression: get_assert_output(&assert)
---
▪▪▪▪ npm install
▪▪▪▪ node:passthroughArgs
-aBc --opt value --optCamel=value foo 'bar baz' --opt-kebab 123

Tasks: 1 completed
 Time: 100ms


