crates/cli/tests/snapshots/run_test__node__retries_on_failure_till_count.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 396
expression: get_assert_output(&assert)
---
▪▪▪▪ node:retryCount
stdout
▪▪▪▪ node:retryCount (attempt 2 of 4)
stdout
▪▪▪▪ node:retryCount (attempt 3 of 4)
stdout
▪▪▪▪ node:retryCount (attempt 4 of 4)
stdout
stderr
stderr
stderr
stderr

[38;5;15m[48;5;161m[1m ERROR [0m

Action runner failed to run: Process ~/.moon/tools/node/16.0.0/bin/node failed with a 1 exit code.


