crates/cli/tests/snapshots/run_test__node__runs_cjs_files.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 279
expression: get_assert_output(&assert)
---
▪▪▪▪ npm install
▪▪▪▪ node:cjs
stdout

Tasks: 1 completed
 Time: 100ms

stderr

