crates/cli/tests/snapshots/run_test__node__runs_from_project_root.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 372
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ node:runFromProject
<WORKSPACE>/node

Tasks: 1 completed
 Time: 100ms


