crates/cli/tests/snapshots/run_test__node__runs_from_workspace_root.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 458
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ npm install
▪▪▪▪ node:runFromWorkspace
<WORKSPACE>

Tasks: 1 completed
 Time: 100ms


